@@ -14,182 +14,254 @@
  */
 package org.apache.geode.management.internal.cli.commands;
 
+import static java.util.stream.Collectors.toSet;
+import static org.apache.geode.distributed.ConfigurationProperties.DISABLE_AUTO_RECONNECT;
 import static org.apache.geode.distributed.ConfigurationProperties.HTTP_SERVICE_BIND_ADDRESS;
 import static org.apache.geode.distributed.ConfigurationProperties.HTTP_SERVICE_PORT;
+import static org.apache.geode.distributed.ConfigurationProperties.STATISTIC_SAMPLE_RATE;
+import static org.apache.geode.distributed.LocatorLauncher.Command.START;
+import static org.apache.geode.management.internal.cli.commands.MemberJvmOptions.getMemberJvmOptions;
+import static org.apache.geode.management.internal.cli.commands.VerifyCommandLine.verifyCommandLine;
+import static org.apache.geode.util.internal.GeodeGlossary.GEMFIRE_PREFIX;
 import static org.assertj.core.api.Assertions.assertThat;
-import static org.junit.Assert.assertEquals;
-import static org.junit.Assert.assertNotNull;
-import static org.junit.Assert.assertTrue;
 import static org.mockito.Mockito.mock;
-import static org.mockito.Mockito.spy;
 import static org.mockito.Mockito.when;
 
 import java.io.File;
+import java.util.ArrayList;
 import java.util.Arrays;
 import java.util.HashSet;
+import java.util.List;
 import java.util.Properties;
 import java.util.Set;
+import java.util.stream.Stream;
 
-import org.junit.After;
-import org.junit.Before;
-import org.junit.Test;
+import org.junit.jupiter.api.BeforeEach;
+import org.junit.jupiter.api.Nested;
+import org.junit.jupiter.api.Test;
 
-import org.apache.geode.distributed.ConfigurationProperties;
 import org.apache.geode.distributed.LocatorLauncher;
-import org.apache.geode.util.internal.GeodeGlossary;
 
-public class StartLocatorCommandTest {
+class StartLocatorCommandTest {
+  // JVM options to use with every start command.
+  private static final Set<String> START_COMMAND_UNCONDITIONAL_JVM_OPTIONS = Stream.of(
+      "-Dgemfire.launcher.registerSignalHandlers=true",
+      "-Djava.awt.headless=true",
+      "-Dsun.rmi.dgc.server.gcInterval=9223372036854775806").collect(toSet());
 
-  private StartLocatorCommand startLocatorCommand;
+  private final StartLocatorCommand startLocatorCommand = new StartLocatorCommand();
 
-  @Before
-  public void setUp() {
-    startLocatorCommand = new StartLocatorCommand();
+  @Nested
+  class GetLocatorClasspath {
+    @Test
+    public void addsUserClasspathImmediatelyAfterGemfireJarPath() {
+      final String userClasspath = "/path/to/user/lib/app.jar:/path/to/user/classes";
+
+      String actualClasspath = startLocatorCommand.getLocatorClasspath(true, userClasspath);
+
+      String expectedClasspath = String.join(File.pathSeparator,
+          StartMemberUtils.getGemFireJarPath(),
+          userClasspath,
+          System.getProperty("java.class.path"),
+          StartMemberUtils.CORE_DEPENDENCIES_JAR_PATHNAME);
+      assertThat(actualClasspath)
+          .isEqualTo(expectedClasspath);
+    }
   }
 
-  @After
-  public void tearDown() {
-    startLocatorCommand = null;
-  }
+  @Nested
+  class CreateStartLocatorCommandLine {
+    private static final String LOCATOR_LAUNCHER_CLASS_NAME =
+        "org.apache.geode.distributed.LocatorLauncher";
 
-  @Test
-  public void testLocatorClasspathOrder() {
-    String userClasspath = "/path/to/user/lib/app.jar:/path/to/user/classes";
-    String expectedClasspath =
-        StartMemberUtils.getGemFireJarPath().concat(File.pathSeparator).concat(userClasspath)
-            .concat(File.pathSeparator).concat(System.getProperty("java.class.path"))
-            .concat(File.pathSeparator).concat(StartMemberUtils.CORE_DEPENDENCIES_JAR_PATHNAME);
-    String actualClasspath = startLocatorCommand.getLocatorClasspath(true, userClasspath);
-    assertEquals(expectedClasspath, actualClasspath);
-  }
+    private final Set<String> expectedJvmOptions = new HashSet<>();
+    private final List<String> expectedStartCommandSequence = new ArrayList<>();
+    private final Set<String> expectedStartCommandOptions = new HashSet<>();
 
-  @Test
-  public void testLocatorCommandLineWithRestAPI() throws Exception {
-    LocatorLauncher locatorLauncher =
-        new LocatorLauncher.Builder().setCommand(LocatorLauncher.Command.START)
-            .setMemberName("testLocatorCommandLineWithRestAPI").setBindAddress("localhost")
-            .setPort(11111).build();
-
-    Properties gemfireProperties = new Properties();
-    gemfireProperties.setProperty(HTTP_SERVICE_PORT, "8089");
-    gemfireProperties.setProperty(HTTP_SERVICE_BIND_ADDRESS, "localhost");
-
-    String[] commandLineElements =
-        startLocatorCommand.createStartLocatorCommandLine(locatorLauncher,
-            null, null, gemfireProperties, null, false, new String[0], null, null);
-
-    assertNotNull(commandLineElements);
-    assertTrue(commandLineElements.length > 0);
-
-    Set<String> expectedCommandLineElements = new HashSet<>(6);
-
-    expectedCommandLineElements.add(locatorLauncher.getCommand().getName());
-    expectedCommandLineElements.add(locatorLauncher.getMemberName().toLowerCase());
-    expectedCommandLineElements.add(String.format("--port=%1$d", locatorLauncher.getPort()));
-    expectedCommandLineElements
-        .add("-d" + GeodeGlossary.GEMFIRE_PREFIX + "" + HTTP_SERVICE_PORT + "=" + "8089");
-    expectedCommandLineElements.add("-d" + GeodeGlossary.GEMFIRE_PREFIX + ""
-        + HTTP_SERVICE_BIND_ADDRESS + "=" + "localhost");
-
-    for (String commandLineElement : commandLineElements) {
-      expectedCommandLineElements.remove(commandLineElement.toLowerCase());
+    @BeforeEach
+    void alwaysExpectUnconditionalOptions() {
+      expectedJvmOptions.addAll(START_COMMAND_UNCONDITIONAL_JVM_OPTIONS);
     }
 
-    assertTrue(String.format("Expected ([]); but was (%1$s)", expectedCommandLineElements),
-        expectedCommandLineElements.isEmpty());
-  }
-
-  @Test
-  public void testCreateStartLocatorCommandLine() throws Exception {
-    LocatorLauncher locatorLauncher = new LocatorLauncher.Builder().setMemberName("defaultLocator")
-        .setCommand(LocatorLauncher.Command.START).build();
-
-    String[] commandLineElements =
-        startLocatorCommand.createStartLocatorCommandLine(locatorLauncher,
-            null, null, new Properties(), null, false, null, null, null);
-
-    Set<String> expectedCommandLineElements = new HashSet<>();
-    expectedCommandLineElements.add(StartMemberUtils.getJavaPath());
-    expectedCommandLineElements.add("-server");
-    expectedCommandLineElements.add("-classpath");
-    expectedCommandLineElements.add(StartMemberUtils.getGemFireJarPath().concat(File.pathSeparator)
-        .concat(StartMemberUtils.CORE_DEPENDENCIES_JAR_PATHNAME));
-    expectedCommandLineElements.add("-Dgemfire.launcher.registerSignalHandlers=true");
-    expectedCommandLineElements.add("-Djava.awt.headless=true");
-    expectedCommandLineElements.add("-Dsun.rmi.dgc.server.gcInterval=9223372036854775806");
-    expectedCommandLineElements.add("org.apache.geode.distributed.LocatorLauncher");
-    expectedCommandLineElements.add("start");
-    expectedCommandLineElements.add("defaultLocator");
-    expectedCommandLineElements.add("--port=10334");
-
-    assertNotNull(commandLineElements);
-    assertTrue(commandLineElements.length > 0);
-    assertEquals(commandLineElements.length, expectedCommandLineElements.size());
-
-    for (String commandLineElement : commandLineElements) {
-      expectedCommandLineElements.remove(commandLineElement);
+    @BeforeEach
+    void alwaysExpectJreSpecificMemberJvmOptions() {
+      expectedJvmOptions.addAll(getMemberJvmOptions());
     }
 
-    assertTrue(String.format("Expected ([]); but was (%1$s)", expectedCommandLineElements),
-        expectedCommandLineElements.isEmpty());
-  }
+    @Test
+    void withTypicalOptions() throws Exception {
+      LocatorLauncher.Builder locatorLauncherBuilder = new LocatorLauncher.Builder();
 
-  @Test
-  public void testCreateStartLocatorCommandLineWithAllOptions() throws Exception {
-    LocatorLauncher locatorLauncher =
-        new LocatorLauncher.Builder().setCommand(LocatorLauncher.Command.START)
-            .setDebug(Boolean.TRUE).setDeletePidFileOnStop(Boolean.TRUE).setForce(Boolean.TRUE)
-            .setHostnameForClients("localhost").setMemberName("customLocator").setPort(10101)
-            .setRedirectOutput(Boolean.TRUE).build();
+      locatorLauncherBuilder.setCommand(START);
+      expectedStartCommandSequence.add(LOCATOR_LAUNCHER_CLASS_NAME);
+      expectedStartCommandSequence.add(START.getName());
 
-    File gemfirePropertiesFile = spy(mock(File.class));
-    when(gemfirePropertiesFile.getAbsolutePath()).thenReturn("/config/customGemfire.properties");
+      final String memberName = "with-typical-options";
+      locatorLauncherBuilder.setMemberName(memberName);
+      expectedStartCommandSequence.add(memberName);
 
-    File gemfireSecurityPropertiesFile = spy(mock(File.class));
-    when(gemfireSecurityPropertiesFile.getAbsolutePath())
-        .thenReturn("/config/customGemfireSecurity.properties");
+      final int defaultPort = 10334;
+      expectedStartCommandOptions.add("--port=" + defaultPort);
 
-    Properties gemfireProperties = new Properties();
-    gemfireProperties.setProperty(ConfigurationProperties.STATISTIC_SAMPLE_RATE, "1500");
-    gemfireProperties.setProperty(ConfigurationProperties.DISABLE_AUTO_RECONNECT, "true");
+      LocatorLauncher locatorLauncher = locatorLauncherBuilder.build();
 
-    String heapSize = "1024m";
-    String customClasspath = "/temp/domain-1.0.0.jar";
-    String[] jvmArguments = new String[] {"-verbose:gc", "-Xloggc:member-gc.log",
-        "-XX:+PrintGCDateStamps", "-XX:+PrintGCDetails"};
+      String expectedClasspath = String.join(
+          File.pathSeparator,
+          StartMemberUtils.getGemFireJarPath(),
+          StartMemberUtils.CORE_DEPENDENCIES_JAR_PATHNAME);
 
-    String[] commandLineElements =
-        startLocatorCommand.createStartLocatorCommandLine(locatorLauncher,
-            gemfirePropertiesFile, gemfireSecurityPropertiesFile, gemfireProperties,
-            customClasspath,
-            Boolean.FALSE, jvmArguments, heapSize, heapSize);
+      List<String> expectedJavaCommandSequence = Arrays.asList(
+          StartMemberUtils.getJavaPath(),
+          "-server",
+          "-classpath",
+          expectedClasspath);
 
-    Set<String> expectedCommandLineElements = new HashSet<>();
-    expectedCommandLineElements.add(StartMemberUtils.getJavaPath());
-    expectedCommandLineElements.add("-server");
-    expectedCommandLineElements.add("-classpath");
-    expectedCommandLineElements
-        .add(StartMemberUtils.getGemFireJarPath().concat(File.pathSeparator).concat(customClasspath)
-            .concat(File.pathSeparator).concat(StartMemberUtils.CORE_DEPENDENCIES_JAR_PATHNAME));
-    expectedCommandLineElements
-        .add("-DgemfirePropertyFile=".concat(gemfirePropertiesFile.getAbsolutePath()));
-    expectedCommandLineElements.add(
-        "-DgemfireSecurityPropertyFile=".concat(gemfireSecurityPropertiesFile.getAbsolutePath()));
-    expectedCommandLineElements.add("-Dgemfire.statistic-sample-rate=1500");
-    expectedCommandLineElements.add("-Dgemfire.disable-auto-reconnect=true");
-    expectedCommandLineElements.addAll(Arrays.asList(jvmArguments));
-    expectedCommandLineElements.add("org.apache.geode.distributed.LocatorLauncher");
-    expectedCommandLineElements.add("start");
-    expectedCommandLineElements.add("customLocator");
-    expectedCommandLineElements.add("--debug");
-    expectedCommandLineElements.add("--force");
-    expectedCommandLineElements.add("--hostname-for-clients=localhost");
-    expectedCommandLineElements.add("--port=10101");
-    expectedCommandLineElements.add("--redirect-output");
+      String[] commandLine =
+          startLocatorCommand.createStartLocatorCommandLine(locatorLauncher,
+              null, null, new Properties(), null, false, null, null, null);
 
-    assertNotNull(commandLineElements);
-    assertTrue(commandLineElements.length > 0);
+      verifyCommandLine(commandLine, expectedJavaCommandSequence, expectedJvmOptions,
+          expectedStartCommandSequence, expectedStartCommandOptions);
+    }
 
-    assertThat(commandLineElements).containsAll(expectedCommandLineElements);
+    @Test
+    void withRestApiOptions() throws Exception {
+      LocatorLauncher.Builder locatorLauncherBuilder = new LocatorLauncher.Builder();
+
+      locatorLauncherBuilder.setCommand(START);
+      expectedStartCommandSequence.add(LOCATOR_LAUNCHER_CLASS_NAME);
+      expectedStartCommandSequence.add(START.getName());
+
+      final String memberName = "with-rest-api-options";
+      locatorLauncherBuilder.setMemberName(memberName);
+      expectedStartCommandSequence.add(memberName);
+
+      final String bindAddress = "localhost";
+      locatorLauncherBuilder.setBindAddress(bindAddress);
+      expectedStartCommandOptions.add("--bind-address=" + bindAddress);
+
+      final int port = 11111;
+      locatorLauncherBuilder.setPort(port);
+      expectedStartCommandOptions.add("--port=" + port);
+
+      LocatorLauncher locatorLauncher = locatorLauncherBuilder.build();
+      Properties gemfireProperties = new Properties();
+
+      // TODO: Where does the command line get the bind address from? Props or launcher?
+      gemfireProperties.setProperty(HTTP_SERVICE_BIND_ADDRESS, bindAddress);
+      expectedJvmOptions.add("-D" + GEMFIRE_PREFIX + HTTP_SERVICE_BIND_ADDRESS + "=" + bindAddress);
+
+      final String servicePort = "8089";
+      gemfireProperties.setProperty(HTTP_SERVICE_PORT, servicePort);
+      expectedJvmOptions.add("-D" + GEMFIRE_PREFIX + HTTP_SERVICE_PORT + "=" + servicePort);
+
+      String expectedClasspath = String.join(
+          File.pathSeparator,
+          StartMemberUtils.getGemFireJarPath(),
+          StartMemberUtils.CORE_DEPENDENCIES_JAR_PATHNAME);
+
+      List<String> expectedJavaCommandSequence = Arrays.asList(
+          StartMemberUtils.getJavaPath(),
+          "-server",
+          "-classpath",
+          expectedClasspath);
+
+      String[] commandLine =
+          startLocatorCommand.createStartLocatorCommandLine(locatorLauncher,
+              null, null, gemfireProperties, null, false, new String[0], null, null);
+
+      verifyCommandLine(commandLine, expectedJavaCommandSequence, expectedJvmOptions,
+          expectedStartCommandSequence, expectedStartCommandOptions);
+    }
+
+    @Test
+    void withAllOptions() throws Exception {
+      LocatorLauncher.Builder locatorLauncherBuilder = new LocatorLauncher.Builder();
+
+      final String memberName = "with-all-options";
+      locatorLauncherBuilder.setCommand(START);
+      locatorLauncherBuilder.setMemberName(memberName);
+      expectedStartCommandSequence.add(LOCATOR_LAUNCHER_CLASS_NAME);
+      expectedStartCommandSequence.add(START.getName());
+      expectedStartCommandSequence.add(memberName);
+
+      locatorLauncherBuilder.setDebug(true);
+      expectedStartCommandOptions.add("--debug");
+
+      locatorLauncherBuilder.setForce(true);
+      expectedStartCommandOptions.add("--force");
+
+      final String hostnameForClients = "localhost";
+      locatorLauncherBuilder.setHostnameForClients(hostnameForClients);
+      expectedStartCommandOptions.add("--hostname-for-clients=" + hostnameForClients);
+
+      final int port = 10101;
+      locatorLauncherBuilder.setPort(port);
+      expectedStartCommandOptions.add("--port=" + port);
+
+      locatorLauncherBuilder.setRedirectOutput(true);
+      expectedStartCommandOptions.add("--redirect-output");
+      expectedJvmOptions.add("-Dgemfire.OSProcess.DISABLE_REDIRECTION_CONFIGURATION=true");
+
+      LocatorLauncher locatorLauncher = locatorLauncherBuilder
+          .build();
+
+      Properties gemfireProperties = new Properties();
+
+      final String statisticSampleRate = "1500";
+      gemfireProperties.setProperty(STATISTIC_SAMPLE_RATE, statisticSampleRate);
+      expectedJvmOptions.add("-Dgemfire.statistic-sample-rate=" + statisticSampleRate);
+
+      final String disableAutoReconnect = "true";
+      gemfireProperties.setProperty(DISABLE_AUTO_RECONNECT, disableAutoReconnect);
+      expectedJvmOptions.add("-Dgemfire.disable-auto-reconnect=" + disableAutoReconnect);
+
+      File propertiesFile = mock(File.class);
+      final String propertiesFilePath = "/config/customGemfire.properties";
+      when(propertiesFile.getAbsolutePath())
+          .thenReturn(propertiesFilePath);
+      expectedJvmOptions.add("-DgemfirePropertyFile=" + propertiesFilePath);
+
+      File securityPropertiesFile = mock(File.class);
+      final String securityPropertiesFilePath = "/config/customGemfireSecurity.properties";
+      when(securityPropertiesFile.getAbsolutePath())
+          .thenReturn(securityPropertiesFilePath);
+      expectedJvmOptions.add("-DgemfireSecurityPropertyFile=" + securityPropertiesFilePath);
+
+      String[] customJvmArguments = {
+          "-verbose:gc",
+          "-Xloggc:member-gc.log",
+          "-XX:+PrintGCDateStamps",
+          "-XX:+PrintGCDetails",
+      };
+      expectedJvmOptions.addAll(Arrays.asList(customJvmArguments));
+
+      final String userClasspath = "/temp/domain-1.0.0.jar";
+      String expectedClasspath = String.join(
+          File.pathSeparator,
+          StartMemberUtils.getGemFireJarPath(),
+          userClasspath,
+          StartMemberUtils.CORE_DEPENDENCIES_JAR_PATHNAME);
+
+      List<String> expectedJavaCommandSequence = Arrays.asList(
+          StartMemberUtils.getJavaPath(),
+          "-server",
+          "-classpath",
+          expectedClasspath);
+
+      final String heapSize = "1024m";
+      expectedJvmOptions.add("-Xms" + heapSize);
+      expectedJvmOptions.add("-Xmx" + heapSize);
+      expectedJvmOptions.add("-XX:+UseConcMarkSweepGC");
+      expectedJvmOptions.add("-XX:CMSInitiatingOccupancyFraction=60");
+
+      String[] commandLine =
+          startLocatorCommand.createStartLocatorCommandLine(locatorLauncher,
+              propertiesFile, securityPropertiesFile, gemfireProperties,
+              userClasspath, false, customJvmArguments, heapSize, heapSize);
+
+      verifyCommandLine(commandLine, expectedJavaCommandSequence, expectedJvmOptions,
+          expectedStartCommandSequence, expectedStartCommandOptions);
+    }
   }
 }
